fixed letter spacing on webkit

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -27,16 +27,18 @@ footer a {
 
 h1 {
     font-family: "riccione";
+    letter-spacing: -0.1vw;
 }
 
 h2 {
     font-family: "terminal";
     margin-bottom: -40px;
+    letter-spacing: -0.05vw;
 }
 
 h3 {
     font-family: "riccione";
-    letter-spacing: -1px;
+    letter-spacing: -0.25vw;
 }
 
 h4 {
